--- a/jsmembertable.sty
+++ b/jsmembertable.sty
@@ -24,8 +24,8 @@
 %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\def\filedate{2015/07/14}
-\def\fileversion{1.1dev}
+\def\filedate{2015/07/15}
+\def\fileversion{1.1}
 \def\filename{jsmembertable.sty}
 
 \NeedsTeXFormat{LaTeX2e}
