--- a/jslectureplanner.tex
+++ b/jslectureplanner.tex
@@ -44,7 +44,7 @@
 \author{Jürgen Spitzmüller%
 \thanks{Please report issues via \protect\url{https://github.com/jspitz/jslectureplanner}.}}
 
-\date{Version 1.1, 2015/07/15}
+\date{Version 1.2dev, 2016/02/22}
 
 \maketitle
 
@@ -960,6 +960,11 @@ the \jslp\ style files. Thanks, Dominik.
 \section{Release History}
 
 \begin{itemize}
+\item Forthcoming (v. 1.2):
+    \begin{itemize}	
+	\item Fix line breaking with empty session titles before course
+	breaks. 
+    \end{itemize}
 \item 2015/07/15 (v. 1.1):
      \begin{itemize}
        \item Include and document the \jsmt\ package.
