New macros to retrieve next session information.

--- a/jslectureplanner.sty
+++ b/jslectureplanner.sty
@@ -23,7 +23,7 @@
 %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\def\filedate{2016/02/22}
+\def\filedate{2016/05/07}
 \def\fileversion{1.2dev}
 \def\filename{jslectureplanner.sty}
 
@@ -159,6 +159,7 @@
 \newcounter{autooffsetcounter}
 \newcounter{breakunits}
 \newcounter{loopcounter}
+\newcounter{nextsession}
 
 %
 % HELPERS
@@ -860,6 +861,67 @@
   \item[{\bfseries\lsesshortdate}]%
     \lsestitle\lsestitlesep\lsessubtitle%
 }
+
+% Get information for the next session
+%
+% Full title
+\newcommand*\NextSessionFullTitle{%
+  \ifnum0<0\sesnr\relax
+    \setcounter{nextsession}{\numexpr\sesnr+1\relax}%
+    \SessionFullTitle{\thenextsession}%
+  \fi
+}
+% Date
+\newcommand*\NextSessionDate{%
+  \ifnum0<0\sesnr\relax
+    \setcounter{nextsession}{\numexpr\sesnr+1\relax}%
+    \SessionDate{\thenextsession}%
+  \fi
+}
+% Short title
+\newcommand*\NextSessionShortTitle{%
+  \ifnum0<0\sesnr\relax
+    \setcounter{nextsession}{\numexpr\sesnr+1\relax}%
+    \SessionShortTitle{\thenextsession}%
+  \fi
+}
+% Main title
+\newcommand*\NextSessionTitle{%
+  \ifnum0<0\sesnr\relax
+    \setcounter{nextsession}{\numexpr\sesnr+1\relax}%
+    \SessionTitle{\thenextsession}%
+  \fi
+}
+% Short date
+\newcommand*\NextSessionShortDate{%
+  \ifnum0<0\sesnr\relax
+    \setcounter{nextsession}{\numexpr\sesnr+1\relax}%
+    \SessionShortDate{\thenextsession}%
+  \fi
+}
+% Room
+\newcommand*\NextSessionRoom{%
+  \ifnum0<0\sesnr\relax
+    \setcounter{nextsession}{\numexpr\sesnr+1\relax}%
+    \SessionRoom{\thenextsession}%
+  \fi
+}
+% Instructor
+\newcommand*\NextSessionInstructor{%
+  \ifnum0<0\sesnr\relax
+    \setcounter{nextsession}{\numexpr\sesnr+1\relax}%
+    \SessionInstructor{\thenextsession}%
+  \fi
+}
+% Presenting students
+\newcommand*\NextSessionPresStudents{%
+  \ifnum0<0\sesnr\relax
+    \setcounter{nextsession}{\numexpr\sesnr+1\relax}%
+    \SessionPresStudents{\thenextsession}%
+  \fi
+}
+%
+%%%%%%%%%%%%%
 
 % Reset to today
 % DEPRECATED as of v.0.8,
