--- a/jslectureplanner.sty
+++ b/jslectureplanner.sty
@@ -23,8 +23,8 @@
 %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\def\filedate{2016/05/08}
-\def\fileversion{1.2dev}
+\def\filedate{2016/05/11}
+\def\fileversion{1.2}
 \def\filename{jslectureplanner.sty}
 
 \NeedsTeXFormat{LaTeX2e}
