Use normal space, not thin space, between month and year in \lecdateformat.

--- a/jslectureplanner.sty
+++ b/jslectureplanner.sty
@@ -23,8 +23,8 @@
 %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\def\filedate{2016/05/11}
-\def\fileversion{1.2}
+\def\filedate{2016/05/21}
+\def\fileversion{1.3dev}
 \def\filename{jslectureplanner.sty}
 
 \NeedsTeXFormat{LaTeX2e}
@@ -282,7 +282,7 @@
 %
 % CUSTOM DATE FORMATS (via datetime)
 %
-\newcommand*\lecdateformat{\THEDAY.\,\twodigit{\THEMONTH}.\,\THEYEAR}
+\newcommand*\lecdateformat{\THEDAY.\,\twodigit{\THEMONTH}.~\THEYEAR}
 \newcommand*\lecdateshortformat{\THEDAY.\,\twodigit{\THEMONTH}.}
 \newdateformat{vldate}{\lecdateformat}
 \newdateformat{vlshdate}{\lecdateshortformat}
