--- a/jslectureplanner.tex
+++ b/jslectureplanner.tex
@@ -69,7 +69,7 @@
 \author{Jürgen Spitzmüller%
 \thanks{Please report issues via \protect\url{https://github.com/jspitz/jslectureplanner}.}}
 
-\date{Version 1.2, 2016/05/11}
+\date{Version 1.3dev, 2016/05/21}
 
 \maketitle
 
@@ -722,7 +722,7 @@ package. By default, the two formats are defined as follows:
 
 \begin{lstlisting}[language={[LaTeX]TeX},basicstyle={\small\ttfamily},frame=single]
 \newcommand*\lecdateformat{%
-    \THEDAY.\,\twodigit{\THEMONTH}.\,\THEYEAR}
+    \THEDAY.\,\twodigit{\THEMONTH}.~\THEYEAR}
 \newcommand*\lecdateshortformat{%
     \THEDAY.\,\twodigit{\THEMONTH}.}
 \end{lstlisting}
@@ -1002,6 +1002,10 @@ the \jslp\ style files. Thanks, Dominik.
 \section{Release History}
 
 \begin{itemize}
+\item Forthcoming (v. 1.3):
+     \begin{itemize}		
+         \item Microtypographic improvement in default definition of \jcsmacro{lecdateformat}.
+	 \end{itemize}
 \item 2016/05/11 (v. 1.2):
     \begin{itemize}	
 	\item Fix line breaking with empty session titles before course breaks. 
