--- a/README
+++ b/README
@@ -68,6 +68,9 @@ instructions; also have a look at the example files.
 
 == CHANGES ==
 
+* V. 1.3 (forthc.):      - Small microtypographic improvement in default definition of
+                           \lecdateformat.
+
 * V. 1.2 (2016-05-11):   - Fix line breaking with empty session titles before course
                            breaks.
 
