--- a/README
+++ b/README
@@ -68,8 +68,12 @@ instructions; also have a look at the example files.
 
 == CHANGES ==
 
-* V. 1.3 (forthc.):      - Small microtypographic improvement in default definition of
-                           \lecdateformat.
+* V. 1.3 (forthc.):      - Use datetime2 instead of datetime and advdate. This changes
+                           the interface to set the lecture date format. Please refer
+                           to the documentation.
+
+                         - Small microtypographic improvement in default definition of
+                           the lecture date format.
 
 * V. 1.2 (2016-05-11):   - Fix line breaking with empty session titles before course
                            breaks.
