--- a/examples/metadata.tex
+++ b/examples/metadata.tex
@@ -59,7 +59,7 @@
 \end{SessionBlock}
 
 % a semester break of two weeks
-\SetBreaks[units=2,span={10.\,--\,23.\,06.}]{Pfingstferien}
+\SetBreaks[units=2,span={25.\,05.\,--\,06.\,06.}]{Pfingstferien}
 
 % start a new frame in beamer
 \SetBeamerFrameBreak
