--- a/README
+++ b/README
@@ -68,9 +68,9 @@ instructions; also have a look at the example files.
 
 == CHANGES ==
 
-* V. 1.3 (forthc.):      - Use datetime2 instead of datetime and advdate. This changes
-                           the interface to set the lecture date format. Please refer
-                           to the documentation.
+* V. 1.3 (forthc.):      - BACKWARDS-INCOMPATIBLE CHANGE! Use datetime2 instead of datetime
+                           and advdate. This changes the interface to set the lecture date
+                           format. Please refer to the documentation for details.
 
                          - Small microtypographic improvement in default definition of
                            the lecture date format.
